--- a/src/projects.json
+++ b/src/projects.json
@@ -1,34 +1,46 @@
 {
   "projects": [
     {
+      "title": "Gradebook",
+      "description": "Developed a Gradebook System for CS196 (200+ students) using Flask backend, MySQL database, Google OAuth authentication, Angular frontend, and deployment using Apache2. Write a deployment script for ease of deployment to apache2 server. Designed scripts to parse grades into mysql database. Backend is private for security reasons.",
+      "image": "gradebook.png",
+      "link": "https://github.com/CS196Illinois/official-website",
+      "live": "https://cs196.cs.illinois.edu"
+    },
+    {
       "title": "Sorting Visualizer",
       "description": "Created an app to visualize bubble sort, selection sort, merge sort, and quick sort algorithms using Cinder UI visualization library.",
       "image": "/sort.gif",
-      "link": "https://github.com/jonahtjandra/sorting-visualizer"
+      "link": "https://github.com/jonahtjandra/sorting-visualizer",
+      "live": ""
     },
     {
       "title": "Naive Bayes Classifier",
       "description": "Created a naïve bayes classifier from scratch and achieved 77% accuracy on the MNIST dataset. Utilized Cinder UI library to create a sketchpad to make the model predict on hand drawn digit",
       "image": "/naivebayes.gif",
-      "link": "https://github.com/jonahtjandra"
+      "link": "https://github.com/jonahtjandra",
+      "live": ""
     },
     {
       "title": "Ideal Gas Particle Simulator",
       "description": "Created a 2 dimensional gas particle simulator and visualization using Cinder UI. Approched using angle free vector representation of velocity under the assumption of perfectly elastic collisions.",
       "image": "/idealgas.gif",
-      "link": "https://github.com/jonahtjandra"
+      "link": "https://github.com/jonahtjandra",
+      "live": ""
     },
     {
       "title": "Sudoku Solver",
       "description": "Used Python to create a program that can display custom sudoku boards and solve them using recursion and backtracking algorithm.",
       "image": "/sudoku.png",
-      "link": "https://github.com/jonahtjandra/sudoku-solver"
+      "link": "https://github.com/jonahtjandra/sudoku-solver",
+      "live": ""
     },
     {
       "title": "Text-Summarizer",
       "description": "Summarizing lectures using T5 text-to-text transfer. Worked on fine-tuning model with lecture transcripts, implementing model using Flask Python for building REST API endpoints,  and user authentication with Google o Auth.",
       "image": "summarizer.png",
-      "link": "https://github.com/jonahtjandra/lecture-summarizer"
+      "link": "https://github.com/jonahtjandra/lecture-summarizer",
+      "live": ""
     }
   ]
 }
