--- a/src/projects.json
+++ b/src/projects.json
@@ -5,7 +5,7 @@
       "description": "Developed a Gradebook System for CS196 (200+ students) using Flask backend, MySQL database, Google OAuth authentication, Angular frontend, and deployment using Apache2. Write a deployment script for ease of deployment to apache2 server. Designed scripts to parse grades into mysql database. Backend is private for security reasons.",
       "image": "gradebook.png",
       "link": "https://github.com/CS196Illinois/official-website",
-      "live": "https://cs196.cs.illinois.edu"
+      "live": "prod"
     },
     {
       "title": "Sorting Visualizer",
