--- a/src/projects.json
+++ b/src/projects.json
@@ -1,11 +1,18 @@
 {
   "projects": [
     {
-      "title": "Gradebook",
-      "description": "Developed a Gradebook System for CS196 (200+ students) using Flask backend, MySQL database, Google OAuth authentication, Angular frontend, and deployment using Apache2. Write a deployment script for ease of deployment to apache2 server. Designed scripts to parse grades into mysql database. Backend is private for security reasons.",
-      "image": "gradebook.png",
-      "link": "https://github.com/CS196Illinois/official-website",
-      "live": "prod"
+      "title": "CS 196 Course Website",
+      "description": "Developed a Gradebook System for CS196 (200+ students) using Flask backend, MySQL database, Google OAuth authentication, Angular frontend, and deployment using Apache2. Write a deployment script for ease of deployment to apache2 server. Designed scripts to parse grades into mysql database. Backend is private for security reasons. Designed and implemented the lectures page and mantain the overall architecture of website.",
+      "image": "124.png",
+      "link": "https://github.com/jonahtjandra/cs196-124-official-website",
+      "live": "https://cs196.cs.illinois.edu/"
+    },
+    {
+      "title": "CS 128 Honors Course Website",
+      "description": "Developed a Gradebook System for CS196 (200+ students) using Flask backend, MySQL database, Google OAuth authentication, Angular frontend, and deployment using Apache2. Write a deployment script for ease of deployment to apache2 server. Designed scripts to parse grades into mysql database. Backend is private for security reasons. Designed and implemented the lectures page and mantain the overall architecture of website.",
+      "image": "128.png",
+      "link": "https://github.com/jonahtjandra/cs196-128-official-website",
+      "live": "https://honors.cs128.org"
     },
     {
       "title": "Sorting Visualizer",
