--- a/src/projects.json
+++ b/src/projects.json
@@ -22,24 +22,10 @@
       "live": ""
     },
     {
-      "title": "Naive Bayes Classifier",
-      "description": "Created a naïve bayes classifier from scratch and achieved 77% accuracy on the MNIST dataset. Utilized Cinder UI library to create a sketchpad to make the model predict on hand drawn digit",
-      "image": "/naivebayes.gif",
-      "link": "https://github.com/jonahtjandra/naive-bayes-classifier",
-      "live": ""
-    },
-    {
       "title": "Text-Summarizer",
       "description": "Summarizing lectures using T5 text-to-text transfer. Worked on fine-tuning model with lecture transcripts, implementing model using Flask Python for building REST API endpoints,  and user authentication with Google o Auth.",
       "image": "summarizer.png",
       "link": "https://github.com/jonahtjandra/lecture-summarizer",
-      "live": ""
-    },
-    {
-      "title": "Ideal Gas Particle Simulator",
-      "description": "Created a 2 dimensional gas particle simulator and visualization using Cinder UI. Approched using angle free vector representation of velocity under the assumption of perfectly elastic collisions.",
-      "image": "/idealgas.gif",
-      "link": "https://github.com/jonahtjandra/ideal-gas-simulator",
       "live": ""
     },
     {
@@ -48,6 +34,27 @@
       "image": "/gala.png",
       "link": "",
       "live": "http://galalaksana.com"
+    },
+    {
+      "title": "Naive Bayes Classifier",
+      "description": "Created a naïve bayes classifier from scratch and achieved 77% accuracy on the MNIST dataset. Utilized Cinder UI library to create a sketchpad to make the model predict on hand drawn digit",
+      "image": "/naivebayes.gif",
+      "link": "https://github.com/jonahtjandra/naive-bayes-classifier",
+      "live": ""
+    },
+    {
+      "title": "Covid-19 LSTM Prediction",
+      "description": "Used tensorflow and sci-kit learn apis to implement LSTM covid-19 predictions.",
+      "image": "/lstm.png",
+      "link": "https://github.com/jonahtjandra/covid19-lstm-predict",
+      "live": ""
+    },
+    {
+      "title": "Ideal Gas Particle Simulator",
+      "description": "Created a 2 dimensional gas particle simulator and visualization using Cinder UI. Approched using angle free vector representation of velocity under the assumption of perfectly elastic collisions.",
+      "image": "/idealgas.gif",
+      "link": "https://github.com/jonahtjandra/ideal-gas-simulator",
+      "live": ""
     },
     {
       "title": "Sudoku Solver",
